--- a/tickets.html
+++ b/tickets.html
@@ -31,10 +31,30 @@
 	{
 	padding:0px;
 	}
+	
+	#toggle_buttons
+	{
+	text-align:center;
+	}
+	
+	#info_table
+	 {
+	    border-collapse:collapse;
+		border:2px solid #333;
+		border-color: white;
+	 }
+
+	#info_table th, #info_table td
+	  {
+		border:2px solid #333;
+		padding:10px 15px;
+		border-color: white;
+	  }
+
 	</style>
   </head>
 
-  <body onload="validateCinema()">
+  <body onload="unconfirm(); validateCinema()">
 
     <header>
         <div> <img src="images/logo.jpg" alt="bloo roo logo" width="140" height="70"/> Bloo Roo Pictures </div>
@@ -50,8 +70,12 @@
     </nav>
 
     <main>
-	<div id="info_table">
-		<table style="width:100%">
+	<div id="toggle_buttons">
+	<button type="button" id="schedule_toggle" onclick="showHideSchedule()" value="hidden">Show Schedule</button>
+	<button type="button" id="pricing_toggle" onclick="showHidePricing()" value="hidden">Show Pricing</button>
+	</div>
+	<div id="schedule_table" hidden>
+		<table id="info_table" style="width:100%">
   <tr>
     <th>Cinema</th>
     <th>Mon-Tue</th> 
@@ -60,19 +84,46 @@
   </tr>
   <tr>
     <td>Maxima</td>
-    <td>6pm - Blended <br> 9pm - Teenage Mutant Ninja Turtles </td> 
-     <td>6pm - Blended <br> 9pm - Teenage Mutant Ninja Turtles </td> 
-      <td>3pm - The LEGO Movie <br> 6pm - Blended <br> 9pm - Teenage Mutant Ninja Turtles </td> 
+    <td>6pm - Blended <br /> 9pm - Teenage Mutant Ninja Turtles </td> 
+     <td>6pm - Blended <br /> 9pm - Teenage Mutant Ninja Turtles </td> 
+      <td>3pm - The LEGO Movie <br /> 6pm - Blended <br /> 9pm - Teenage Mutant Ninja Turtles </td> 
   </tr>
   <tr>
   	<td> Rivola </td>
   	<td> Closed </td>
-  	 <td>12pm - The LEGO Movie <br> 7pm - The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared</td> 
-  	 <td>4pm - Teenage Mutant Ninja Turtles <br> 7pm - The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared </td>
+  	 <td>12pm - The LEGO Movie <br /> 7pm - The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared</td> 
+  	 <td>4pm - Teenage Mutant Ninja Turtles <br /> 7pm - The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared </td>
   </tr>
 </table>
+<br />
+</div>
 
+<div id="pricing_table" hidden>
+		<table id="info_table" style="width:100%">
+  <tr>
+    <th>Cinema</th>
+    <th>Regular Times</th> 
+    <th>Regular Prices</th>
+    <th>Discount Times</th> 
+    <th>Discount Prices</th>
+  </tr>
+  <tr>
+    <td>Maxima</td>
+    <td>Monday<br />Tuesday</td> 
+    <td>Adult ($12)<br />Concession($10)<br />Child($8)<br />First Class Adult($25)<br />First Class Child($20)<br />Beanbag($20)</td> 
+	<td>Wednesday<br />Thursday<br />Friday<br />Saturday<br />Sunday </td> 
+    <td>Adult ($18)<br />Concession($15)<br />Child($12)<br />First Class Adult($30)<br />First Class Child($25)<br />Beanbag($30)</td> 
+  </tr>
+  <tr>
+  	<td> Rivola </td>
+  	<td>Wednesday (12pm)<br />Thursday (12pm)<br />Friday (12pm)</td>
+	<td>Adult ($12)<br />Concession($10)<br />Child($8)</td>
+    <td>Wednesday (7pm)<br />Thursday (7pm)<br />Friday (7pm)<br />Saturday<br />Sunday </td> 
+    <td>Adult ($18)<br />Concession($15)<br />Child($12)</td> 
+	</tr>
+</table>
 	</div>
+	
 	<div class="content">
 	<div id="info_box">
 	<br /><br /><br />
@@ -84,7 +135,7 @@
 	<form action="http://titan.csit.rmit.edu.au/~e54061/wp/form-tester-2.php" method="post">
 	<h2> Book Now </h2>
 	Film <br />
-	<select id="film" name="film" onchange="validateMovie()" required>
+	<select id="film" name="film" onchange="unconfirm(); validateMovie()" required>
 	<option value="">Select Movie</option>
 	<option value="F001">The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared</option>
 	<option value="F002">Blended</option>
@@ -92,8 +143,8 @@
 	<option value="F004">Teenage Mutant Ninja Turtles</option>
 	</select>
 	<br />Cinema<br />
-	<input id="maxima" type="radio" name="cinema" value="maxima" onchange="validateCinema()" required /> Maxima
-	<input id="rivola" type="radio" name="cinema" value="rivola" onchange="validateCinema()" required /> Rivola
+	<input id="maxima" type="radio" name="cinema" value="maxima" onchange="unconfirm(); validateCinema()" required /> Maxima
+	<input id="rivola" type="radio" name="cinema" value="rivola" onchange="unconfirm(); validateCinema()" required /> Rivola
 	<br />Day<br />
 	<select id="day" name="day"  onchange="unconfirm()" required>
 	<option value="">Select Day</option>
@@ -121,35 +172,35 @@
 	<tr><td><b>Regular Seating</b></td><td></td><td></td></tr>
 	<tr>
 	<td>Adult</td>
-	<td> <input id="seat_adult" type="number" name="seat_adult" min="0" max="40" value="0" required></td>
+	<td> <input id="seat_adult" type="number" name="seat_adult" min="0" max="40" value="0" onchange="unconfirm()" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required></td>
 	<td id="price_adult"></td>
 	</tr>
 	<tr>
 	<td>Concession</td>
-	<td> <input id="seat_concession" type="number" name="seat_concession" min="0" max="40" value="0" required></td>
+	<td> <input id="seat_concession" type="number" name="seat_concession" min="0" max="40" value="0" onchange="unconfirm()" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required></td>
 	<td id="price_concession"></td>
 	</tr>
 	<tr>
 	<td>Child</td>
-	<td> <input id="seat_child" type="number" name="seat_child" min="0" max="40" value="0" required></td>
+	<td> <input id="seat_child" type="number" name="seat_child" min="0" max="40" value="0" onchange="unconfirm()" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required></td>
 	<td id="price_child"></td>
 	</tr>
 	<tr><td><b>Beanbags</b></td><td></td><td></td></tr>
 	<tr>
 	<td>Number </td>
-	<td> <input id="seat_bean" type="number" name="seat_bean" min="0" max="13" value="0" required></td>
+	<td> <input id="seat_bean" type="number" name="seat_bean" min="0" max="13" value="0" onchange="unconfirm()" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required></td>
 	<td id="price_bean"></td>
 	</tr>
 	
 	<tr><td><b>First Class Seating</b></td><td></td><td></td></tr>
 	<tr>
 	<td>Adult</td>
-	<td> <input id="seat_first_adult" type="number" name="seat_first_adult" min="0" max="12" value="0" required></td>
+	<td> <input id="seat_first_adult" type="number" name="seat_first_adult" min="0" max="12" value="0" onchange="unconfirm()" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required></td>
 	<td id="price_first_adult"></td>
 	</tr>
 	<tr>
 	<td>Child</td>
-	<td> <input id="seat_first_child" type="number" name="seat_first_child" min="0" max="12" value="0" required></td>
+	<td> <input id="seat_first_child" type="number" name="seat_first_child" min="0" max="12" value="0" onchange="unconfirm()" onkeypress='return event.charCode >= 48 && event.charCode <= 57' required></td>
 	<td id="price_first_child"></td>
 	</tr><tr>
 	<td><b>Total</b></td><td></td>
@@ -157,9 +208,8 @@
 	</table>
 	<br />
 	<input id="price" type="number" name="price" value="0" required hidden>
-	<input id="submit" type="submit" />
+	<button type="button" onclick="confirm()">Calculate Price</button> <input id="submit" type="submit" />
 	</form>
-	<button onclick="confirm()">Calculate Price</button>
 	</div>
 	</div>
 	</main>
