--- a/movies.html
+++ b/movies.html
@@ -75,27 +75,31 @@
 		<p><img class="promo_img" src="images/RomCom.jpg" alt="Blended Promotional Image" width = "155" height = "229"/>
 		After a disastrous blind date, single parents Lauren and Jim agree on only one thing: they never want to see each other again. But when they each sign up separately for a fabulous family vacation with their kids, they are all stuck sharing a suite at a luxurious African safari resort for a week in "Blended," the third comedy collaboration between stars Adam Sandler and Drew Barrymore.
 		<br /><b>Age Classification: </b>PG
+		<br /><b>Now Showing: </b>6pm Everyday</p>
 	</div>
 	
 	<div id="movie2">
 		<h1> Teenage Mutant Ninja Turtles </h1>
 		<p><img class="promo_img" src="images/action.jpg" alt="Teenage Mutant Ninja Turtles Promotional Image" width = "155" height = "229"/>
 		The city needs heroes. Darkness has settled over New York City as Shredder and his evil Foot Clan have an iron grip on everything from the police to the politicians. The future is grim until four unlikely outcast brothers rise from the sewers and discover their destiny as Teenage Mutant Ninja Turtles. The Turtles must work with fearless reporter April O'Neil (Megan Fox) and her wise-cracking cameraman Vern Fenwick (Will Arnett) to save the city and unravel Shredder's diabolical plan.
-		<br /><b>Age Classification: </b>PG</p>
+		<br /><b>Age Classification: </b>PG
+		<br /><b>Now Showing: </b>9pm Wednesday to Sunday, 4pm Saturday & Sunday</p>
 	</div>
 	
 	<div id="movie3">
 		<h1> The Lego Movie </h1>
 		<p><img class="promo_img" src="images/children.jpg" alt="Lego Movie Promotional Image" width = "155" height = "229"/>
 		"The LEGO (R) Movie" is the first-ever, full-length theatrical LEGO (R) adventure. The original 3D computer animated story follows Emmet (Chris Pratt) an ordinary, rules- following, perfectly average LEGO minifigure who is mistakenly identified as the most extraordinary person and the key to saving the world. He is drafted into a fellowship of strangers on an epic quest to stop an evil tyrant, a journey for which Emmet is hopelessly and hilariously underprepared.
-		<br /><b>Age Classification: </b>PG</p>
+		<br /><b>Age Classification: </b>PG
+		<br /><b>Now Showing: </b>12pm Wednesday to Friday, 3pm Saturday & Sunday</p>
 	</div>
 	
 	<div id="movie4">
 		<h1> The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared </h1>
 		<p><img class="promo_img" src="images/foreign.jpg" alt="The 100 Year-Old Man Who Climbed Out Of The Window And Disappeared Promotional Image" width = "155" height = "229"/>
 		Based on the internationally best-selling novel by Jonas Jonasson, the unlikely story of a 100-year-old man who decides it's not too late to start over. For most people it would be the adventure of a lifetime, but Allan Karlsson's unexpected journey is not his first. For a century he's made the world uncertain, and now he is on the loose again.
-		<br /><b>Age Classification: </b>M</p>
+		<br /><b>Age Classification: </b>M
+		<br /><b>Now Showing: </b>7pm Wednesday to Sunday</p>
 	</div>
 	
 	</div>
